--- a/build.yaml
+++ b/build.yaml
@@ -6,7 +6,7 @@
 # `artifact-name` to assign a name to distinguish build outputs from each other:
 #
 board: [ "nice_nano_v2" ]
-shield: [ "kleinpad" ]
+shield: [ "kleinpad", "settings_reset" ]
 # include:
 #   - board: bdn9_rev2
 #   - board: nice_nano_v2
