--- a/boards/shields/kleinpad/kleinpad.conf
+++ b/boards/shields/kleinpad/kleinpad.conf
@@ -5,3 +5,10 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_BATTERY_REPORTING=y
 
 CONFIG_RGBLED_WIDGET=y
+
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
