--- a/boards/shields/kleinpad/kleinpad.conf
+++ b/boards/shields/kleinpad/kleinpad.conf
@@ -6,6 +6,11 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 
 CONFIG_RGBLED_WIDGET=y
 
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_TIMEOUT=120000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_ZMK_PM_SOFT_OFF=y
+
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
