--- a/boards/shields/kleinpad/kleinpad.conf
+++ b/boards/shields/kleinpad/kleinpad.conf
@@ -17,3 +17,5 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
+
+CONFIG_ZMK_POINTING=y
