--- a/config/west.yml
+++ b/config/west.yml
@@ -8,12 +8,17 @@ manifest:
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
     - name: caksoylar
       url-base: https://github.com/caksoylar
+    - name: dhruvinsh
+      url-base: https://github.com/dhruvinsh
   projects:
     - name: zmk
       remote: zmkfirmware
       import: app/west.yml
     - name: zmk-rgbled-widget
       remote: caksoylar
+      revision: main
+    - name: zmk-tri-state
+      remote: dhruvinsh
       revision: main
   self:
     path: config
